Concept tweaks, misc

--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -2,15 +2,12 @@
 
 \chapter{Introduction to Global Illumination and Previous Work}
 
-\todo[color=green]{how much reading and correction of actual text by you}
-\todo[color=green]{sign off this chapter}
+\todo[color=green]{get the title}
 
 
 \section{A High-Level Overview of Lighting in Computer Graphics}
+
 \begin{outline}
-
-\todo[color=green]{get the title}
-
 \1 basically, the physics and optics behind this don't know the following destinctions. there are photons, and atoms/matter, and photons are either reflected, refracted or absorbed (maybe watch that PBR talk again)
 \1 in practice, this level of accuracy is not feasible to compute except for the most accurate physics simulations.
 \1 in computer graphics, and especially in the real-time department, researchers and engineers have separated this ??? into several effects that can be simulated or approximated independently from each other.
@@ -164,6 +161,7 @@ Of course, when used for real-time applications the available performance budget
 \subsection{Theory}
 \todo{many-light theory}
 - focusing on why this is a valid model
+- maybe explain clamping here and leave it out everywhere else?
 
 
 \subsection{Components of Many-Light Methods}
