--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -15,15 +15,15 @@
 This chapter will detail the individual stages of the global illumination pipeline presented in this thesis. Figure~\ref{fig:GIPipelineConcept} provides an overview.
 The reflective shadow map and the subsequent VPL sampling (left part of middle row in the diagram) will be covered in the following section.
 Section~\ref{sec:concept:ism} describes the rendering process for the imperfect shadow maps (lower row) in detail.
-The final gathering step uses data from the clustered shading technique (upper row, detailed in Section~\ref{sec:concept:clusteredShading}) and performs interleaved sampling (right part of middle row, detailed in Section~\ref{sec:interleavedSampling}.
+The final gathering step uses data from the clustered shading technique (upper row, detailed in Section~\ref{sec:concept:clusteredShading}) and performs interleaved sampling (right part of middle row, detailed in Section~\ref{sec:concept:interleavedSampling}).
+Finally, during final gathering, we use clamping to remove singularities, this is shortly presented in Section~\ref{sec:concept:clamping}.
 Our G-buffer rendering does not differ from common deferred rendering pipelines and is not covered further.
-Finally, we use clamping to remove singularities, this is shortly presented in Section~\ref{sec:concept:clamping}.
 
 
 \section{Virtual Point Light Sampling with Reflective Shadow Maps}
 \label{sec:concept:rsmVplSampling}
 
-VPL sampling has not been the focus of this thesis, therefore we use a rather basic approach by rendering a  reflective shadow map \parencite{Dachsbacher:2005:RSM} and regularly sampling it. \citet{hedman2016sequential} present a more advanced approach.
+VPL sampling has not been the focus of this thesis, therefore we use a rather basic approach by rendering a  simple reflective shadow map and regularly sampling it. \citet{hedman2016sequential} present a more advanced approach.
 
 \begin{outline}
 \1 Often preferred due to the simplicity and speed because rasterization. but, first bounce only.
@@ -55,7 +55,7 @@ We describe the point rendering process in the following section and subsequentl
 \begin{outline}
 \1 render the scene
 \1 depending on the size of the triangle, set tessellation levels
-\1 of the resulting tessellated triangles, take the center, calculate approx world size of disk, take normal from buffer
+\1 of the resulting tessellated triangles, take the center, calculate approx world size of disk
 \1 while it might be faster to just use the vertices as points, we take the center of each triangle to be more accurate, otherwise the points on the edge of the triangle will enlarge the rendered area considerably.
 \1 pick a random VPL, perform culling, render splat into the VPL's ISM. To simplify the calculations, the ISM uses a paraboloid mapping. Here another advantage of the points comes into play: Compared to triangles it is trivial to perform a paraboloid projection for points.
 \1 As an optimization, we iterate over several VPLS, and collect some that pass the culling test, and render to those. more in implementation chapter
@@ -65,7 +65,7 @@ We describe the point rendering process in the following section and subsequentl
 \subsection{Point Rendering with Pull-Push Postprocessing}
 
 \begin{outline}
-\1 Besides point splat rendering, we also persued a second approach that follows the approach of \citet{Marroquim:2007:reconstruction} more closely. More specifically points are rendered as a single pixel, albeit with additional attributes like size and normal. These are then used in a subsequent reconstruction pass to create an (ideally) hole-free shadowmap.
+\1 Besides point splat rendering, we also pursued a second approach that follows the algorithm of \citet{Marroquim:2007:reconstruction} more closely with the intent to obtain higher-quality shadowmaps. More specifically points are rendered as a single pixel, albeit with additional attributes like size and normal. These are then used in a subsequent reconstruction pass to create an (ideally) hole-free shadowmap.
 
 \1 rough overview: the algorithm is a ``pyramid-method'' and uses miplevels.
 \1 a pull phase aggregates the information from four pixels of a finer level to one pixel of a coarser level.
@@ -81,18 +81,20 @@ We describe the point rendering process in the following section and subsequentl
 \section{Clustered Deferred Shading}
 \label{sec:concept:clusteredShading}
 
+In real-time graphics applications, primarily video games, a technique called \textit{clustered shading} \citep{olsson2012clustered}, has seen increased usage. Its goal is to increase the efficiency of lighting a scene with multiple light sources.
+The effectiveness of clustered shading in the context of many-light global illumination has not been studied so far to our knowledge, and we aim to contribute a few datapoints to this end.
 
+The integrated algorithm works as follows:
 \begin{outline}
-\1 in addition to interleaved sampling, we also employ a technique taken from \citet{olsson2012clustered}
 \1 view frustum is divided into a fixed number of clusters
 \1 for each fragment, determine cluster. clusters with no fragments are ignored.
 \1 for each cluster, determine the VPLs that can reach that cluster, put into light list.
 \1 during shading, don't iterate over all VPLs but only those from the light list.
 \1 usually, large benefits due to limited radius. we have infinite radius, but at least we can discard half the lights because hemisphere.
-\todo{ritschel's paper about clustering}
 \end{outline}
 
-
+Clustered shading is an extension and improvement to \textit{tiled shading} \citep{Olsson:2011:TiledShading}, that uses screen-space tiles instead of view-space clusters. Tiled shading has previously combined with many-lights global illumination by \citet{Tokuyoshi:2016:Stochastic}. They use an order of magnitude more lights than we do, but stochastically limit them in range. As a result, the light culling is much more effective in their case.
+We implement tiled shading as well and compare it to clustered shading.
 
 
 \section{Interleaved Sampling}
