Add ISM rendering race condition and pull-push algorithm to concept and implementation

--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -52,7 +52,7 @@ for another introduction into GI, see \citet{Ritschel:2012:GISTAR}.
 
 \subsection{Theory}
 
-\todo{GI theory}
+\todo[color=blue]{GI theory}
 - part of this must be what makes this so computationally intensive
 
 
@@ -159,7 +159,7 @@ Of course, when used for real-time applications the available performance budget
 
 
 \subsection{Theory}
-\todo{many-light theory}
+\todo[color=blue]{many-light theory}
 - focusing on why this is a valid model
 - maybe explain clamping here and leave it out everywhere else?
 
