--- a/chap-results.tex
+++ b/chap-results.tex
@@ -30,8 +30,17 @@ and memory of course
 \1 frame-to-frame coherency here? two screenshots with diff.
 \end{outline}
 
+
 \section{ISM Rendering}
+
+\todo[color=blue]{ISM rendering results}
+
 
 \section{Interleaved Shading with Compute Shaders}
 
+\todo[color=blue]{interleaved shading results}
+
+
 \section{Clustered Deferred Shading}
+
+\todo[color=blue]{clustered deferred shading results}
