--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -65,16 +65,24 @@ We describe the point rendering process in the following section and subsequentl
 \subsection{Point Rendering with Pull-Push Postprocessing}
 
 \begin{outline}
-\1 Besides point splat rendering, we also pursued a second approach that follows the algorithm of \citet{Marroquim:2007:reconstruction} more closely with the intent to obtain higher-quality shadowmaps. More specifically points are rendered as a single pixel, albeit with additional attributes like size and normal. These are then used in a subsequent reconstruction pass to create an (ideally) hole-free shadowmap.
+\1 Besides point splat rendering, we also pursued a second approach that follows the algorithm of \citet{Marroquim:2007:reconstruction} more closely with the intent to obtain higher-quality shadowmaps. More specifically points are rendered as a single pixel, albeit with additional attributes like size and normal. These are then used in a subsequent reconstruction pass to create an (ideally) hole-free shadowmap. This approach also allowed a point to be rendered into multiple shadowmaps with a moderate performance impact, more on this in the next chapter.
 
 \1 rough overview: the algorithm is a ``pyramid-method'' and uses miplevels.
 \1 a pull phase aggregates the information from four pixels of a finer level to one pixel of a coarser level.
-\1 It only considers valid pixels, i.\,e. ???
-\1 the push phase aggregates four pixels of the coarser level for each pixel of the finer level.
-\1 Again only pixels that are valid, i.\,e. ???
-\1 we differ from the original implementation by...
+\1 a subsequent push phase aggregate four pixels of a coarser level to one pixel of a finer level if the pixel of the finer level contains no data or is determined to belong to an occluded surface. This way, closed surfaces are derived from single-pixel points.
+
+\1 Pull phase
+    \2 It only considers pixels that pass the following tests: First, they need to contain a valid depth at all (i.e. a point must have been rendered into this pixel) and second, the pixels depth must not be greater than the frontmost of the four considered pixels plus its depth interval. If this test fails, the point is assumed to belong to a different surface that is occluded and thus should not be used for interpolation.
+    \2 The depth interval of each point is determined by adding a constant value to the rendered depth for the points in the lowest miplevel. For interpolated points, the new depth interval spans the calculated depth of the point to the highest depth value of the depth intervals of all points used for aggregation.
+    \2 The depth and radius attributes are interpolated in between with equal weights. Since the center of the aggregated point might not match with the position of the pixel (this happens if not all four pixels are used for interpolation), a displacement vector is also calculated that describes the point's location.
+\1 Push phase
+    \2 Again only pixels that pass certain tests
+        \3 Analogous to the pull phase, points must contain a valid depth and not be occluded.
+        \3 A radius check: If the pixel's location is outside the point's extends described by the displacement vector and its radius, then the point is not considered either. This is done to limit a point's influence to its actual size.
+    \2 The pixel of the finer level might already contain data computed during the pull phase. This data is overwritten if the aggregated data has a smaller depth, i.e. if the original data is considered to be occluded. Otherwise, the original point is left as it is.
+    \2 The weights used for interpolation during the push phase are not uniform, see Figure~\ref{fig:???}.
+\1 \citet{Marroquim:2007:reconstruction} also use the point's normals to give them to correctly limit the point's size, and \citet{Marroquim:2008:reconstruction2} propose gaussian weights based on the pixel's distance to the point's location, instead constant weights solely based on pixel locations. Both of these additions we have not implemented yet.
 \end{outline}
-\todo{expand on this}
 
 
 
