--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -68,33 +68,50 @@
 \1 i.e. position: center of triangle, radius: distance of center to farthest triangle vertex, normal: the face normal taken from the original, non-tessellated triangle.
 
 \1 the geometry shader then calculates a random VPL ID. We used the point's barycentric coordinate inside its triangle and the triangle's primitive ID to seed the random number generator, as both values are readily available and coherent between frames.
+
+\1 the next step depends on whether point splatting or pull-push postprocessing is enabled.
 \end{outline}
 
 \subsection{Point Rendering with Splatting}
-\1 two approaches:
+\begin{outline}
+\1 in case of point splatting, the geometry shader itself reads the VPL with the index it determined, projects the point according to the VPL's data, performs culling (backface and hemisphere) sets gl\_PointSize to the projected size, and emits a vertex.
+\1 also, output mode is points. fragment shader empty.
+\1 to avoid holes, we simply enlarge all points by a certain percentage.
 
-\1 either the geometry shader itself reads the VPL with the index it determined, projects the point according to the VPL's data, sets gl\_PointSize to the projected size, and emits a vertex.
-\1 also, output mode is points.
 
-\1 \citet{Marroquim:2007:reconstruction} actually works with single-pixel ``splats''. since in this case we're not depending on the hardware rasterizer for good performance, this inspired the following approach:
 
 \subsection{Point Rendering with Pull-Push Postprocessing}
+\1 Since \citet{Marroquim:2007:reconstruction} works with single-pixel ``splats''. since in this case we're not depending on the hardware rasterizer for good performance, this allowed the following approach:
+
 \1 instead of splatting, the geometry shader puts points into buffer
 \1 one buffer per VPL for stability
 \1 buffers index marks the first VPL to try
-\1 then, per point in each buffer, starting with the respective VPL, we test a fixed number of VPLs (e.\,g. 16) and collect up to 4 that pass culling tests.
-\1 specifically, backface culling and points that are located behind the VPL, i.\,e. not in the hemisphere pointing along the VPL's normal.
-\1 we then render the point as a single pixel into the 4 collected VPLs.
+\1 then, per point in each buffer, starting with the respective VPL, we test a fixed number of VPLs (e.\,g. 16) and collect up to 4 that pass culling tests (test itself is the same as above)
+\1 we then use imageStore to ``render'' the point as a single pixel into the 4 collected VPLs. we also use additional buffers as additional ``render targets'' and write the point's size in there.
 
-\todo{part of this into concept}
+\1 doing this with the geometry shader (especially emitting more than one vertex) lead to bad performance, therefore we couldn't do this there. Reason: first, GS bad at outputting multiple vertices, second, fillrate bound. postprocessing approach does not have the fillrate problem.
 
+\1 the race condition
+    \2 first, the order of writes to the depth buffer is undefined as the execution order of the different compute shaders is undefined in the OpenGL specification. Therefore, the classical z-fighting may occur if two points are rendered into the same pixel of the same shadowmap with the same depth value. The value that gets written into the second render target is undefined and may differ between subsequent frames. In practice, this happens very rarely and we chose to ignore this.
+    \2 However, a different race condition was frequently observable in our implementation:
+    \2 If if one thread does a successful write into the depth buffer, and a second thread that is executing simultaneously or shortly thereafter performs a write with an even lower value but is ordered by the atomic engine (?) after the first write, that write will succeed as well so the lowest value will (correctly) end up in memory. However, since both threads succeeded, both threads will attempt to write to the second buffer, creating another race condition since the here execution order is undefined again. We alleviate this problem by adding a synchronization point after the atomic write and then reading the memory location that just got written to. If it is equal to the written value, the write actually succeded and did not get overwritten by a second, simultaneous write. Only then we write to the second buffer.
+    \2 However, this solution fixes the race condition only inside one work group and not between work groups, for which no efficient synchronization primitives exist on the GPU. The problem occurred infrequently enough though to be negligible.
+    \2 A proper solution that would fix this problem completely, avoiding the synchronization overhead and open more optimization possibilities would involve a more advanced software renderer, e.g. following the approaches of \cite{foo} or \cite{bar}.
 
-\1 hole mitigation
-\1 when splatting, the quality difference improvement achieved with an additional pull-push algorithm compared to slightly larger splats seemed not worth the performance impact, therefore we chose to simply enlarge all splats a bit.
-\1 when using compute shaders, we need pull-push by design.
 \end{outline}
 
-\todo{explain pullpush implementation}
+
+\begin{outline}
+\1 our implementation of the pull-push algorithm is relatively straightforward. For each miplevel to be calculated, one dispatchCompute is called. Since the first step of the pull phase has different inputs than the subsequent steps (it only has depth and size, not the displacement vector and depth interval), we use a slightly different shader there. Analogous the last step of the push phase outputs only depth, therefore we use a shader variant for that step, too.
+\1 in the pull phase, one compute shader invocation calculates one output pixel. it reads its four input pixels, determines which of them are valid, and uses the valid ones for interpolating.
+\1 the pull phase works analoguous. Each invocation reads four input pixels and computes one output pixel. Since we have non-uniform weights here anyway, it seemed simpler to set the weight of invalid pixels to zero instead of separately marking them as invalid.
+\1 note that this implementation is not optimized. for instance, in the pull phase, groups of four output pixels have the same four input pixels, so a straightforward optimization would be to read four pixels once and calculate all four output pixels that are derived from these four input pixels, saving three quarters of all texture or texture cache reads.
+\todo[color=yellow]{implement four input pixels = four output pixels}
+\1 More room for optimization does exist. Especially the pull phase is basically a parallel reduction which is well-researched and for which optimized algorithms on the GPU exist, see e.g. \citet{thatNVIDIAPresentation}. Several optimizations from that fields might be applicable here.
+\1 since this technique is heavily bandwidth-bound, we aggressively pack the data.
+\todo[color=yellow]{actually pack this shit aggressively. 32bit depth and depth interval, 32bit displacement and radius and that's it. }
+\end{outline}
+
 
 \section{Interleaved Shading with Compute Shaders}
 \label{sec:impl:interleavedShading}
