--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -43,7 +43,7 @@
 
 \logo{graphics/logo_black}
 
-\title{Titel der Arbeit}
+\title{Design and Implementation of a Many-Light Method for Real-Time Dynamic Global Illumination}
 %\subtitle{Untertitel} % z.B. englischer Titel bei Bachelorarbeit
 
 %\subject{%
